# atpg-ls

./: CMakeLists.txt  README.md  crun  run_parallel.py
benchmark/: all.txt  b01.bench  b02.bench  b03.bench  b04.bench  b05.bench  b06.bench  b07.bench  b08.bench  b09.bench  b10.bench  b11.bench  b12.bench  b13.bench  b14.bench  b14_1.bench  b15_1.bench  b17.bench  b17_1.bench  b18.bench  b18_1.bench  b20.bench  b20_1.bench  b21.bench  b21_1.bench  b22.bench  b22_1.bench  c1355.bench  c17.bench  c1908.bench  c2670.bench  c3540.bench  c432.bench  c499.bench  c5315.bench  c6288.bench  c7552.bench  c880.bench  pbo.txt  r.txt  (+40 more)
src/: CMakeLists.txt  checker.cpp  checker.h  circuit.cpp  circuit.h  fault.h  gate.cpp  gate.h  ls.cpp  lut.cpp  lut.h  main.cpp  paras.cpp  paras.h  parse.cpp  pattern.h  sat_atpg.cpp  sat_atpg.h  score.cpp  simulator.cpp  simulator.h
tg-pro/: CMakeCache.txt  Makefile  b01.result  b02.result  cmake_install.cmake  compile_commands.json  crun
tg-pro/.cache/clangd/index/: FILE.h.3E2187E08D11E118.idx  __sigval_t.h.4EE558E3F2780E3A.idx  __stddef_max_align_t.h.BBB15ED8808D8073.idx  algorithmfwd.h.403DD0F3F84476DC.idx  alloc_traits.h.E429CD30034E465D.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.AB57E492BDF2A2B8.idx  allocator.h.007AC0B614B681A6.idx  array.661D83F8EAEC6A2D.idx  assert.h.F44EF353D67C7E11.idx  atomic_base.h.3A2E72751505F214.idx  (+215 more)
tg-pro/cadical06w/tmp/: cadical06w-mkdirs.cmake
tg-pro/src/: Makefile  cmake_install.cmake  main.cpp
tg-pro/src/sat/: Makefile  cmake_install.cmake
tg-pro/src/tests/: Makefile  cmake_install.cmake
(+3 files in other folders)
